Losses currently required as a list

--- a/codes/Untitled.ipynb
+++ b/codes/Untitled.ipynb
@@ -75,7 +75,7 @@
     "})\n",
     "\n",
     "# train the model and output results\n",
-    "model.train(losses=Loss.SUPERVISED)\n",
+    "model.train(losses=[Loss.SUPERVISED])\n",
     "model.print(params=True)\n",
     "\n",
     "\n",
